<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_preferences_"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_1_"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="109dp"
            android:layout_height="51dp"
            android:text="@string/name_"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_user1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="216dp"
            android:layout_height="56dp"
            android:text="@string/search_food_nearby_"
            android:textColor="@color/grey"
            android:textSize="20sp"

            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_curations_"
            android:textColor="@color/black"
            android:textSize="25sp"

            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="66dp"
            android:layout_height="42dp"
            android:text="@string/home_"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/purepng_1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/whatsapp_image_2020_06_16_at_4_23" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/line_69" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite_dishes_"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/rectangle_2_copy" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="26dp"
            android:layout_height="46dp"
            app:srcCompat="@drawable/coolicon"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="34dp"
            android:layout_height="34dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/vector"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/line_69" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/recent_orders_"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/rectangle_27" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/rectangle_29" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/kfc_nuggets_"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:text="burger more"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView11"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/desi_italian_3_more_"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/burgers_bevarages_"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:text="@string/_200_rub"
            android:textColor="@color/orange"
            android:textSize="27sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="25sp"
            android:text="@string/_200_rub"
            android:textColor="@color/orange"
            android:textSize="27sp"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_marginTop="250sp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:srcCompat="@drawable/compass" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="250sp"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="250sp"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:srcCompat="@drawable/sale" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="49dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            android:layout_marginTop="250sp"
            android:layout_marginStart="50sp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:srcCompat="@drawable/user" />


</androidx.constraintlayout.widget.ConstraintLayout>